--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,31 @@
     flex-direction: row;
   }
 
+  .header-wrapper{
+    border-bottom: 1px solid #777777;
+  }
+
+  #header{
+    display: flex;
+    align-content: space-between;
+  }
+
+  #name{
+    display: flex;
+    justify-content: center;
+    background: #4aaaa5;  
+    width: 200px;
+    color: #ffffff;
+ }
+
+  #aboutme-wrapper{
+    background: #ffffff;
+  }
+  
+  .content{
+    background: url(../assets/images/regal.png)
+  
+  }
 
   .navbarNav {
       display: flex;
@@ -20,6 +45,7 @@
     padding-bottom:5px ; */
     color: #ffffff;
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    border-top: 8px solid #4aaaa5;
     /* margin-top: -40px; */
   }
 
@@ -55,3 +81,6 @@
     color:#777777;
   }
 
+  .with-margin {
+    margin-bottom: 20px;
+  }
