--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,38 @@
     /* margin-top: -40px; */
   }
 
+    
+  .grid{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    flex-direction: row;
+    /* width: 500px;  */
+    /* border-color: lime; */
+    }
+  
+
+  /* #grid .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  } */
+  
+  /* Create four equal columns that sits next to each other */
+  /* #grid .column {
+    flex: 50%;
+    max-width: 50%;
+    padding: 0 4px;
+  } */
+  
+  .grid img {
+    margin-top: 8px;
+    vertical-align: middle;
+    /* width: 100%; */
+    max-width: 200px;
+    max-height: 150px;
+  }
+  
 
   h1,h2,h3,h4,h5,h6{
     font-family: 'Georgia', Times, 'Times New Roman', serif;
