--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,22 @@
 /* 
 <!--BootStrap Portfolio CSS--> */
-h1{
-  font-family: Arial, Helvetica, sans-serif;
+.container{
+  margin: 0 auto;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+h3{
+  color: #777777;
 }
 
 
+
+/* 
 .container {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-  }
+  } */
 
   .header-wrapper{
     border-bottom: 1px solid #777777;
@@ -52,7 +59,7 @@ h1{
   }
 
   button[type=submit] {
-    background-color: #4aaaa5;
+    background-color: #aa4a85;
     color: #ffffff;
     padding: 10px 20px;
     border: none;
@@ -61,15 +68,19 @@ h1{
  
 
   .footer{
-    /* background: #666666; */
-    /* border-top: 2px solid #4aaaa5; */
-    /* padding-top: 10px;
-    padding-bottom:5px ; */
     color: #ffffff;
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    border-top: 8px solid #4aaaa5;
+    border-top: 8px solid  #aa4a85;
     /* margin-top: -40px; */
-  }
+       bottom: 0;
+      width: 100%;
+      /* position: absolute; */
+      position: relative;
+      height: height-footer;
+        /* .footer-block {
+        margin: 20px 0;
+      } */
+    }
 
     
   .grid{
@@ -106,7 +117,7 @@ h1{
   
 
   h1,h2,h3,h4,h5,h6{
-    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   }
   
   a:link {
@@ -140,9 +151,9 @@ h1{
     margin-bottom: 20px;
   }
 
-  @media screen and (min-width: 400px) {
+  /* @media screen and (min-width: 400px) {
     /* The body's bg color will be #333 */
-    body {
+    /* body {
       background-color: #333;
     }
- 
+  */ 
